--- a/src/entities/meson.build
+++ b/src/entities/meson.build
@@ -1,3 +1,3 @@
-entities_files = files('Rect.cpp')
+entities_files = files('Object.cpp', 'Rect.cpp', 'Texture.cpp')
 
 entities_includes = include_directories('include')
