--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -65,7 +65,8 @@
         "__string": "cpp",
         "chrono": "cpp",
         "compare": "cpp",
-        "concepts": "cpp"
+        "concepts": "cpp",
+        "functional": "cpp"
     },
     "mesonbuild.buildFolder": "build"
 }
