--- a/src/services/meson.build
+++ b/src/services/meson.build
@@ -1,3 +1,8 @@
-services_files = files('LevelService.cpp', 'NullLevelService.cpp', 'ServiceLocator.cpp')
+services_files = files(
+    'GraphicsService.cpp',
+    'LevelService.cpp',
+    'NullLevelService.cpp',
+    'ServiceLocator.cpp',
+)
 
 services_includes = include_directories('include')
