feat(sdl): add infra for sdl wrapper

--- a/meson.build
+++ b/meson.build
@@ -8,6 +8,9 @@ project(
 subdir('src/')
 subdir('src/entities')
 subdir('src/services')
+subdir('src/sdl')
+
+# Entities Dependency
 
 libentities = static_library('entities', entities_files, include_directories: entities_includes)
 
@@ -16,6 +19,7 @@ libentities_dep = declare_dependency(
   link_with: libentities,
 )
 
+# Core Services Dependency
 libservices = static_library(
   'services',
   services_files,
@@ -28,4 +32,19 @@ libservices_dep = declare_dependency(
   link_with: libservices,
 )
 
-executable('dook', main_file, dependencies: [libentities_dep, libservices_dep])
+# SDL Wrapper Depenedency
+
+libsdl = static_library(
+  'sdl',
+  sdl_files,
+  include_directories: sdl_includes,
+  dependencies: [libentities_dep, libservices_dep],
+)
+
+libsdl_dep = declare_dependency(
+  include_directories: sdl_includes,
+  link_with: libsdl,
+)
+
+
+executable('dook', main_file, dependencies: [libentities_dep, libservices_dep, libsdl_dep])
