chore(sdl): add sdl2 dependency

--- a/meson.build
+++ b/meson.build
@@ -34,11 +34,14 @@ libservices_dep = declare_dependency(
 
 # SDL Wrapper Depenedency
 
+sdl2_dep = dependency('sdl2')
+sdl2_main_dep = dependency('sdl2main')
+
 libsdl = static_library(
   'sdl',
   sdl_files,
   include_directories: sdl_includes,
-  dependencies: [libentities_dep, libservices_dep],
+  dependencies: [libentities_dep, libservices_dep, sdl2_dep, sdl2_main_dep],
 )
 
 libsdl_dep = declare_dependency(
@@ -47,4 +50,9 @@ libsdl_dep = declare_dependency(
 )
 
 
-executable('dook', main_file, dependencies: [libentities_dep, libservices_dep, libsdl_dep])
+executable(
+  'dook',
+  main_file,
+  win_subsystem: 'windows',
+  dependencies: [libentities_dep, libservices_dep, libsdl_dep],
+)
