feat(services): add logger service

--- a/src/services/meson.build
+++ b/src/services/meson.build
@@ -1,5 +1,5 @@
 services_files = files(
-    'GraphicsService.cpp',
+    'CommonLoggerService.cpp',
     'LevelService.cpp',
     'NullLevelService.cpp',
     'ServiceLocator.cpp',
