feat(sdl): add sdl scaffholding (#6)

--- a/src/services/meson.build
+++ b/src/services/meson.build
@@ -1,5 +1,6 @@
 services_files = files(
     'CommonLoggerService.cpp',
+    'GraphicsService.cpp',
     'LevelService.cpp',
     'NullLevelService.cpp',
     'ServiceLocator.cpp',
