--- a/meson.build
+++ b/meson.build
@@ -39,13 +39,14 @@ libservices_dep = declare_dependency(
 # SDL Wrapper Depenedency
 
 sdl2_dep = dependency('sdl2')
-sdl2_main_dep = dependency('sdl2main')
+sdl2_main_dep = dependency('sdl2main', required: host_machine.system() == 'windows')
+sdl2_img_dep = dependency('sdl2_image')
 
 libsdl = static_library(
   'sdl',
   sdl_files,
   include_directories: sdl_includes,
-  dependencies: [libentities_dep, libservices_dep, sdl2_dep, sdl2_main_dep],
+  dependencies: [libentities_dep, libservices_dep, sdl2_dep, sdl2_main_dep, sdl2_img_dep],
 )
 
 libsdl_dep = declare_dependency(
@@ -58,5 +59,5 @@ executable(
   'dook',
   main_file,
   win_subsystem: 'windows',
-  dependencies: [libentities_dep, libservices_dep, libsdl_dep, sdl2_dep],
+  dependencies: [libentities_dep, libservices_dep, libsdl_dep, sdl2_dep, sdl2_img_dep],
 )
