--- a/meson.build
+++ b/meson.build
@@ -13,6 +13,7 @@ subdir('src/')
 subdir('src/entities')
 subdir('src/services')
 subdir('src/sdl')
+subdir('src/game')
 
 # Entities Dependency
 
@@ -55,9 +56,29 @@ libsdl_dep = declare_dependency(
 )
 
 
+# Game dependency, this hopefully wraps everything together.
+libgame = static_library(
+  'game',
+  game_files,
+  include_directories: game_includes,
+  dependencies: [libentities_dep, libservices_dep, sdl2_dep, sdl2_main_dep, sdl2_img_dep, libsdl]
+)
+
+libgame_dep = declare_dependency(
+  include_directories: game_includes,
+  link_with: libgame
+)
+
 executable(
   'dook',
   main_file,
   win_subsystem: 'windows',
-  dependencies: [libentities_dep, libservices_dep, libsdl_dep, sdl2_dep, sdl2_img_dep],
+  dependencies: [
+    libentities_dep,
+    libservices_dep,
+    libsdl_dep,
+    sdl2_dep,
+    sdl2_img_dep,
+    libgame_dep
+  ],
 )
