--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,5 +1,5 @@
 {
-    "C_Cpp.default.compileCommands": "build/compile_commands.json",
+    "C_Cpp.default.compileCommands": "/Users/elsa/Projects/dook/build/compile_commands.json",
     "files.associations": {
         "optional": "cpp",
         "string": "cpp",
@@ -66,7 +66,13 @@
         "chrono": "cpp",
         "compare": "cpp",
         "concepts": "cpp",
-        "functional": "cpp"
+        "functional": "cpp",
+        "condition_variable": "cpp",
+        "deque": "cpp",
+        "queue": "cpp",
+        "stack": "cpp",
+        "thread": "cpp"
     },
-    "mesonbuild.buildFolder": "build"
+    "mesonbuild.buildFolder": "build",
+    "C_Cpp.default.configurationProvider": "mesonbuild.mesonbuild"
 }
