--- a/src/sdl/meson.build
+++ b/src/sdl/meson.build
@@ -1,3 +1,3 @@
-sdl_files = files('SDLGraphicsService.cpp', 'SDLTexture.cpp')
+sdl_files = files('SDLGraphicsService.cpp', 'SDLInputService.cpp', 'SDLTexture.cpp')
 
 sdl_includes = include_directories('include')
