--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,5 +1,5 @@
 {
-    "C_Cpp.default.compileCommands": "/Users/elsa/Projects/dook/build/compile_commands.json",
+    "C_Cpp.default.compileCommands": "build/compile_commands.json",
     "files.associations": {
         "optional": "cpp",
         "string": "cpp",
