--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,5 +1,5 @@
 {
-    "C_Cpp.default.compileCommands": "build/compile_commands.json",
+    "C_Cpp.default.compileCommands": "/Users/elsa/Projects/dook-engine/build/compile_commands.json",
     "files.associations": {
         "optional": "cpp",
         "string": "cpp",
@@ -71,7 +71,9 @@
         "deque": "cpp",
         "queue": "cpp",
         "stack": "cpp",
-        "thread": "cpp"
+        "thread": "cpp",
+        "span": "cpp",
+        "ranges": "cpp"
     },
     "mesonbuild.buildFolder": "build",
     "C_Cpp.default.configurationProvider": "mesonbuild.mesonbuild"
