feat(sdl): initialise graphics service using SDL (#14)

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,6 +1,8 @@
 {
-    "C_Cpp.default.compileCommands": "/Users/elsa/Projects/dook/build/compile_commands.json",
+    "C_Cpp.default.compileCommands": "${workspaceFolder}/build/compile_commands.json",
     "files.associations": {
+        "*.erd": "json",
+        "*.vuerd": "json",
         "optional": "cpp",
         "string": "cpp",
         "variant": "cpp",
@@ -71,7 +73,10 @@
         "deque": "cpp",
         "queue": "cpp",
         "stack": "cpp",
-        "thread": "cpp"
+        "thread": "cpp",
+        "span": "cpp",
+        "ranges": "cpp",
+        "format": "cpp"
     },
     "mesonbuild.buildFolder": "build",
     "C_Cpp.default.configurationProvider": "mesonbuild.mesonbuild"
