style(meson): lint

--- a/src/entities/meson.build
+++ b/src/entities/meson.build
@@ -1,3 +1,10 @@
-entities_files = files('Character.cpp', 'Level.cpp', 'Object.cpp', 'Rect.cpp', 'Texture.cpp', 'Camera.cpp')
+entities_files = files(
+    'Camera.cpp',
+    'Character.cpp',
+    'Level.cpp',
+    'Object.cpp',
+    'Rect.cpp',
+    'Texture.cpp',
+)
 
 entities_includes = include_directories('include')
