--- a/src/sdl/meson.build
+++ b/src/sdl/meson.build
@@ -1,3 +1,7 @@
-sdl_files = files('SDLGraphicsService.cpp', 'SDLInputService.cpp', 'SDLTexture.cpp')
+sdl_files = files(
+    'SDLGraphicsService.cpp',
+    'SDLInputService.cpp',
+    'SDLTexture.cpp',
+)
 
 sdl_includes = include_directories('include')
