feat(services): add the parser service infrastructure

--- a/src/services/meson.build
+++ b/src/services/meson.build
@@ -2,9 +2,11 @@ services_files = files(
     'CommonLoggerService.cpp',
     'GraphicsService.cpp',
     'LevelService.cpp',
+    'NullInputService.cpp',
     'NullLevelService.cpp',
+    'NullParserService.cpp',
+    'ParserService.cpp',
     'ServiceLocator.cpp',
-    'NullInputService.cpp'
 )
 
 services_includes = include_directories('include')
