--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -81,7 +81,8 @@
         "forward_list": "cpp",
         "fstream": "cpp",
         "iomanip": "cpp",
-        "valarray": "cpp"
+        "valarray": "cpp",
+        "memory_resource": "cpp"
     },
     "mesonbuild.buildFolder": "build",
     "C_Cpp.default.configurationProvider": "mesonbuild.mesonbuild"
